judge/ba8484aaa7d64a7089b921e4fb1b20bc/e95c268745ca0d0ddf5c5c6f2ecbc1c3/2016-07-26-02:33:10compile.log
/edx/xblock-simplejudge/judge/ba8484aaa7d64a7089b921e4fb1b20bc/e95c268745ca0d0ddf5c5c6f2ecbc1c3/Main.java:2: error: class Mmain is public, should be declared in a file named Mmain.java
public class Mmain{
       ^
1 error
